# athena

./: .gitignore  .gitmodules  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  Dockerfile.Template  Dockerfile.Template_  LICENSE  README.md  docker_setup.py  requirements.txt
athena_tool/: .gitmodules  README.md  ext_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  workflow.md
athena_tool/.config/accelergy/: accelergy_config.yaml
athena_tool/accelergy_architectures/base_systolic/: timeloop-mapper.map+stats.xml  timeloop-mapper.map.txt  timeloop-mapper.stats.txt
athena_tool/accelergy_architectures/base_systolic/arch/: eyeriss_like-float32.yaml
athena_tool/accelergy_architectures/base_systolic/mapper/: mapper.yaml
athena_tool/accelergy_architectures/sonos_pim/: README.md  actions.yaml  sonos_config.yaml  sonos_test.py
athena_tool/accelergy_architectures/sonos_pim/PIM_estimation_tables/32nm_data/: 32nm.table.yaml
athena_tool/accelergy_architectures/sonos_pim/PIM_estimation_tables/32nm_data/data/: ADC.csv  DAC.csv  DRAM.csv  SRAM.csv  intadder.csv  sample_and_hold.csv  shift_and_add.csv
athena_tool/accelergy_architectures/sonos_pim/PIM_estimation_tables/memristor_data/data/: ReRAMcell_compute.csv  ReRAMcell_storage.csv
athena_tool/accelergy_architectures/sonos_pim/PIM_estimation_tables/sonos_data/: sonos.table.yaml
athena_tool/accelergy_architectures/sonos_pim/PIM_estimation_tables/sonos_data/data/: sonos_cell_storage.csv
athena_tool/accelergy_architectures/sonos_pim/arch/: sonos_fpe.yaml  sonos_single.yaml  sonos_tile.yaml  system_PIM.yaml  system_SONOS.yaml  system_SONOS2.yaml  system_sonos_single.yaml  test_sono.yaml
athena_tool/accelergy_architectures/sonos_pim/arch/components/: A2D_conversion_system.yaml  ADC_SimpleMulticast.yaml  D2A_conversion_system.yaml  DAC_SimpleMulticast.yaml  custom_sram.yaml  digital_accumulation_system.yaml  lmac.yaml  memcell_compute.yaml  primitive_sonos.lib.yaml  sonos_array.yaml  sonos_compute_mapper.yaml  sonos_fpe.yaml  storage.yaml
athena_tool/accelergy_architectures/sonos_pim/constraints/: base_pim_constraints.yaml  constraints.yaml  single_constraints.yaml  tile_mapper_constraints.yaml
athena_tool/accelergy_architectures/sonos_pim/mapper/: mapper.yaml
athena_tool/accelergy_architectures/sonos_pim/outputs/: detailed_summary.pkl  verbose_summary.csv
athena_tool/accelergy_architectures/sonos_pim/vgg/: eye_like.sh  parse_timeloop_output.py  results.txt  timeloop-mapper.ERT.yaml  timeloop-mapper.map+stats.xml  timeloop-mapper.map.txt  timeloop-mapper.stats.txt  timeloop-output.pkl
athena_tool/accelergy_architectures/sonos_pim/vgg-analysis/: analysis.ipynb  vgg_athena_data.csv  vgg_athena_detailed.pkl
athena_tool/external_repos/: deps.yaml
athena_tool/external_repos/accelergy/: Code-of-conduct.md
athena_tool/external_repos/accelergy-aladdin-plug-in/: aladdin_table.py
athena_tool/external_repos/accelergy-table-based-plug-ins/set_of_table_templates/data/: DRAM.csv  FIFO.csv  SRAM.csv  bitwise.csv  comparator.csv  counter.csv  crossbar.csv  deserializer.csv  fpadder.csv  fpmac.csv  fpmultiplier.csv  intadder.csv  intmac.csv  intmultiplier.csv  regfile.csv  serializer.csv  wire.csv
athena_tool/external_repos/accelergy/accelergy/: ERT_generator.py  accelergy_console.py  io.py
athena_tool/external_repos/accelergy/share/primitive_component_libs/: pim_primitive_component.lib.yaml  primitive_component.lib.yaml
athena_tool/external_repos/accelergy_old/accelergy/: accelergy_console.py
athena_tool/external_repos/accelergy_old/share/primitive_component_libs/: primitive_component.lib.yaml
athena_tool/external_repos/timeloop/: CMakeLists.txt  CMakePresets.json  dev.yaml
athena_tool/external_repos/timeloop/.cache/clangd/index/: accelergy_interface.cpp.3CA0DC5F33692E3D.idx  accelergy_interface.hpp.F84AF8BAAEC3C386.idx  anchor.h.CA0FBC68EB132379.idx  anchordict.h.84005BD2A9421CCE.idx  arch-properties.cpp.9B2CF8479D92878A.idx  arch-properties.hpp.2458A913F11811BF.idx  args.cpp.4304DF00357B94A5.idx  args.hpp.C04D9BC559EA7651.idx  arithmetic.cpp.3714D1B5A56A602C.idx  arithmetic.hpp.541A32986BA50852.idx  attribute.hpp.D039A5566F0D886D.idx  banner.cpp.ABD2D96101125501.idx  banner.hpp.3569878486F3CC50.idx  binary.cpp.5D08AAEBC76642C2.idx  binary.h.128D8B0DDED3F708.idx  buffer.cpp.0A20DCF416A3A6F3.idx  buffer.hpp.93F429EF45258513.idx  cnn-densities.cpp.C8EC927EF0851811.idx  cnn-densities.hpp.ECC147422A16883C.idx  cnn-layers.cpp.222B1EA9DA63BBC7.idx  cnn-layers.hpp.533281766335E850.idx  collectionstack.h.DF1E274081CD1A06.idx  compound-config.cpp.4A78C569A45F1078.idx  compound-config.hpp.E1FC898E8FEDDA94.idx  constraints.cpp.ECA14C7CA0472468.idx  (+209 more)
athena_tool/external_repos/timeloop/configs/mapper/: sample-accelergy.yaml
athena_tool/external_repos/timeloop/include/loop-analysis/: nest-analysis-tile-info.hpp
athena_tool/src/athena/: __init__.py  __main__.py
athena_tool/src/athena/accelergy-sonos-plug-in/: README.md  setup.py  sonos.estimator.yaml  sonos_estimator.py  t.py
athena_tool/src/athena/athena_ir/: __init__.py  accelergy_sonos_gen.py  athena_wrapper.py  layer_types.py  mstro_mapping.py  output_comm_gen.py  output_parser_base.py  pooling_layers.py  problem.py  sonos_energy_gather.ipynb  sonos_estimation_tools.ipynb  sonos_sim_run.py  vgg_data.csv
athena_tool/src/athena/athena_ir/activations/: __init__.py  max_ops.py
athena_tool/src/athena/athena_ir/data/: known_layer_types.yaml  mapping_output_examples.txt  tile.yaml
athena_tool/src/athena/athena_ir/timeloop_output/: timeloop_direct.py  timeloop_output.py
athena_tool/src/athena/athena_main/: athena_system.py
athena_tool/src/athena/config/: __init__.py  athena_config.py  click_helpers.py  config_helpers.py
athena_tool/src/athena/utils/: __init__.py  initialize.py  parse_stats.py  sanitize.py  timeloop.py
athena_tool/tests/: conftest.py  test_output_comm_gen.py  test_skeleton.py
athena_tool/tests/athena_ir/: mst_model_mapping_data.py  mstro_mapping_generation_data.yml  test_mstro_mapping.py  test_problem.py
(+24 files in other folders)
