# [build-system]
# # AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
# requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
# build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
#version_scheme = "no-guess-dev"
#version_scheme = "release-branch-semver"
#version_scheme = "no-guess-dev"
#fallback_version = "0.0.1"
#root = ".."
#relative_to = 'setup.py'
#local_scheme = "node-and-timestamp"
